# nya-interview

./: README.md  pyproject.toml  ruff.toml
src/nya_interview/: __init__.py  __main__.py  _base.py
