[project]
name = 'nya-interview'
dynamic = ['version']
description = 'Create cli-based interviews easily'
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nya-scope>=0.2.1",
    "rich>=14.3.3",
]

# [project.scripts]
# nya_interview = "nya_interview.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/nya_interview/_version.py"
pattern = '__version__(?:: str)? *= *\"(?P<version>[^\"]+)\"'

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "tcrutils>=13.1.39",
]
